<resources>
    <string name="app_name">Analizator obrazów</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome_screen_text">Analizator obrazów</string>
    <string name="new_photo">Przesyłanie obrazów</string>
    <string name="send_photo">Pobieranie obrazów</string>
    <string name="server_domain">https://192.168.0.3/</string>
    <!--<string name="server_domain">https://192.168.43.81:62000/serwer/</string>-->
    <!--<string name="server_domain">https://192.168.0.3:62000/serwer/</string>-->
    <string name="title_activity_login">Zaloguj się</string>
    <string name="server_ip">192.168.0.3</string>
    <string name="server_address_file">server_address.txt</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- strings related with messages-->
    <string name="socket_exception">Błąd komunikacji z serwerem. Skontaktuj się z Administratorem.</string>
    <string name="connect_exception">Brak połączenia z serwerem. Sprawdź połączenie z Internetem.</string>
    <string name="no_route_to_host_exception">Nie można się połączyć z serwerem. Sprawdź, czy adres serwera jest poprawny</string>
    <string name="unknown_error">Nieznany błąd</string>
    <string name="image_sent">Przesłano obraz do serwera</string>
    <string name="non_ok_status">Serwer zwrtócił kod błędu</string>
    <string name="IOException">Niepoprawny format przesyłanych danych do serwera. Proszę ponownie załadować ten widok/aplikację</string>
    <string name="processedImageNotExistsOnServerException">Przetwarzanie obrazu w toku</string>
    <string name="SSLHandshakeException">Nieprawidłowy samopodpisany certyfikat. Sprawdź czy masz zapisany poprawny certyfikat w aplikacji lub skontaktuj się z administratorem</string>

    <!-- Strings related to action buttons-->
    <string name="crop_action">Crop</string>
    <string name="reset_action">Resetuj</string>
    <string name="send_action">Wyślij</string>
    <string name="camera_action">Zrób zdjęcie</string>
    <string name="gallery_action">Wybierz z galerii</string>
    <string name="rotate_right_action">Rotate right</string>
    <string name="rotate_left_action">Rotate left</string>
    <string name="download_action">Download</string>

    <!-- Other -->
    <string name="serverPreferences">serverPreferences</string>
    <string name="loginPreferences">loginPreferences</string>
    <string name="firstLaunchMessage">Pierwsze uruchomienie aplikacji Analizator Obrazów! Proszę wprowadzić prawidłowy adres serwera lub pozostawić domyślny.</string>
    <string name="defaultCertificate">-----BEGIN CERTIFICATE-----
MIIC/jCCAeagAwIBAgIQNWCgYxO7lJhPgiaI3oEvjjANBgkqhkiG9w0BAQsFADAa
MRgwFgYDVQQDEw9ERVNLVE9QLVQzSjlKRzIwHhcNMTgwNDI1MTEzNDE1WhcNMTkw
NDI1MDAwMDAwWjAaMRgwFgYDVQQDEw9ERVNLVE9QLVQzSjlKRzIwggEiMA0GCSqG
SIb3DQEBAQUAA4IBDwAwggEKAoIBAQDNqQZwwF+q6A7w8IzBMxOpSPAabwLk+7Vk
q2Di3FCT+G/dy3SPB9+guvWddrJ5hxXU0c/S4dd9BmDlIy+occn0G8LHyJ79V6HS
HYZjHAk+qAMxRGcUZ0zKe6/h/mFok2+55lIHGVvfsiViTI/8Fj/oK0plRkwCBoTx
bMvhm8IhINpEt8Dl9bUpIMij6KZJ5+jfZu5+BW86VWPQayAlQ/5NT7JJshYy98FB
nU08o4/THtMFLUnaEbM93WirNJncwSe8dwMWoe1UOt8wC30k6QcwexDTXC0KE04A
FcHwxIxtsGQ1JgmRXff854OlnQnUP5Nx+MXIQH9JEXSbAvjZxWrZAgMBAAGjQDA+
MAsGA1UdDwQEAwIEMDATBgNVHSUEDDAKBggrBgEFBQcDATAaBgNVHREEEzARgg9E
RVNLVE9QLVQzSjlKRzIwDQYJKoZIhvcNAQELBQADggEBAHukb302DhLgJm441BZM
QIPHGAvT1HpygrUZCXRrqsBZ1On2p/nOPx5w/cxHvkt3M+xcrhZCqllffSnV41Fb
P+SnlLdqBTsBcXJNs5fmfvQGxNKEnIF4lYdUYbbc5exB0/IshB0SHqcJmz6aN4g5
fkvTAF3tCxqdVcE5Aknfa4Wfayu6AgsHqB64MRF9/oeFHRgmwyf7kcAd9o9R7aQo
sWpQjvtmyCxgXbAKbmo4/cFmatWdxwyylNZe51HhDmmqXp6sEArT7NijYfVePG9p
tVz1Ka5aArFvCqGkwu3mG+x6jO/aFkOlhfl3Qxta4posOflEgWgV5ePRA/oNEbAm
ja4=
-----END CERTIFICATE-----</string>
    <string name="algorithmReturnTypeNotification">Uwaga - algorytm "całe szkiełko" zwraca długość próbki w milimetrach. Pozostałe zwracają procentową długość w stosunku do całego obrazu</string>
</resources>
