<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/rotate_left"
        android:icon="@drawable/ic_rotate_left"
        android:orderInCategory="1"
        android:title="@string/rotate_left_action"
        app:showAsAction="always" />
    <item
        android:id="@+id/rotate_right"
        android:icon="@drawable/ic_rotate_right"
        android:orderInCategory="1"
        android:title="@string/rotate_right_action"
        app:showAsAction="always" />
    <item
        android:id="@+id/crop"
        android:icon="@drawable/ic_crop"
        android:orderInCategory="1"
        android:title="@string/crop_action"
        app:showAsAction="always" />
    <item
        android:id="@+id/camera"
        android:icon="@drawable/ic_menu_camera"
        android:orderInCategory="4"
        android:title="@string/camera_action"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_menu_gallery"
        android:orderInCategory="5"
        android:title="@string/gallery_action"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/send"
        android:icon="@drawable/ic_menu_send"
        android:orderInCategory="6"
        android:title="@string/send_action"
        app:showAsAction="never" />
    <item
        android:id="@+id/reset"
        android:orderInCategory="7"
        android:title="@string/reset_action"
        app:showAsAction="never" />
</menu>